--- a/.github/workflows/main_jfrack.yml
+++ b/.github/workflows/main_jfrack.yml
@@ -21,14 +21,14 @@ jobs:
         with:
           java-version: '17'
 
-      - name: Build with Maven
+      - name: Build with Gradle
         run: mvn clean install
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.jar'
+          path: '${{ github.workspace }}/build/libs/JF-0.0.1-SNAPSHOT.jar'
 
   deploy:
     runs-on: windows-latest
@@ -50,4 +50,4 @@ jobs:
           app-name: 'jfrack'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_382AB8E2B856477596527C7A20B85888 }}
-          package: '*.jar'
+          package: '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/build/libs/JF-0.0.1-SNAPSHOT.jar'
