--- a/.github/workflows/main_jfrack.yml
+++ b/.github/workflows/main_jfrack.yml
@@ -20,7 +20,10 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: '17'
-
+      
+      - name: Allow access
+        run: chmod +x gradlew
+        
       - name: Build with Gradle
         run: ./gradlew clean build
 
