--- a/.github/workflows/main_jfrack-website.yml
+++ b/.github/workflows/main_jfrack-website.yml
@@ -21,14 +21,17 @@ jobs:
         with:
           java-version: '17'
 
-      - name: Build with Maven
-        run: mvn clean install
+      - name: Allow access
+        run: chmod +x gradlew
+      
+      - name: Build with Gradle
+        run: ./gradlew clean build
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.jar'
+          path: '${{ github.workspace }}/build/libs/JF-0.0.1-SNAPSHOT.jar'
 
   deploy:
     runs-on: windows-latest
