--- a/.github/workflows/main_jfrack-website-app.yml
+++ b/.github/workflows/main_jfrack-website-app.yml
@@ -21,6 +21,9 @@ jobs:
         with:
           java-version: '17'
 
+      - name: Allow access
+        run: chmod +x gradlew
+      
       - name: Build with Gradle
         run: ./gradlew clean build
 
