--- a/.github/workflows/main_jfrack-website-app.yml
+++ b/.github/workflows/main_jfrack-website-app.yml
@@ -52,5 +52,5 @@ jobs:
         with:
           app-name: 'jfrack-website-app'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_7179CC0CAEE34A9C9888921521CE2BB7 }}
+          publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
           package: '*.jar'
