--- a/.github/workflows/main_jfrack-website-app.yml
+++ b/.github/workflows/main_jfrack-website-app.yml
@@ -53,4 +53,4 @@ jobs:
           app-name: 'jfrack-website-app'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
-          package: '*.jar'
+          package: 'build/libs/*.jar'
