--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,15 @@ java {
 	sourceCompatibility = '17'
 }
 
+bootJar {
+	archiveFileName = 'app.jar'
+	enabled = true
+}
+
+jar {
+	enabled = false
+}
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
