--- a/.github/workflows/main_jfrack-website-app.yml
+++ b/.github/workflows/main_jfrack-website-app.yml
@@ -17,21 +17,23 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Set up Java version
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: '17'
+          distribution: 'temurin'
+          cache: 'gradle'
 
       - name: Allow access
         run: chmod +x gradlew
       
       - name: Build with Gradle
-        run: ./gradlew clean build
+        run: ./gradlew clean bootJar
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: java-app
-          path: 'build/libs/JF-0.0.1-SNAPSHOT.jar'
+          path: 'build/libs/app.jar'
 
   deploy:
     runs-on: ubuntu-latest
@@ -53,4 +55,4 @@ jobs:
           app-name: 'jfrack-website-app'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
-          package: 'build/libs/*.jar'
+          package: 'build/libs/app.jar'
