--- a/.github/workflows/main_jfrack-website-app.yml
+++ b/.github/workflows/main_jfrack-website-app.yml
@@ -27,7 +27,7 @@ jobs:
         run: chmod +x gradlew
       
       - name: Build with Gradle
-        run: ./gradlew clean bootJar
+        run: ./gradlew clean build
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -55,4 +55,4 @@ jobs:
           app-name: 'jfrack-website-app'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
-          package: 'build/libs/app.jar'
+          package: 'JF-0.0.1-SNAPSHOT.jar'
