--- a/.github/workflows/main_jfrack-website-app.yml
+++ b/.github/workflows/main_jfrack-website-app.yml
@@ -33,7 +33,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: java-app
-          path: 'build/libs/app.jar'
+          path: 'build/libs/JF-0.0.1-SNAPSHOT.jar'
 
   deploy:
     runs-on: ubuntu-latest
@@ -55,4 +55,4 @@ jobs:
           app-name: 'jfrack-website-app'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
-          package: 'JF-0.0.1-SNAPSHOT.jar'
+          package: '*.jar'
